[project]
name = "claude-code-runner"
version = "0.2.15"
description = "基于 Claude Code SDK 的 Web 服务封装，通过 FastAPI 提供 REST API 和 Web 界面来调用 Claude Code 执行编程任务"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "pywin32>=311",
    "uvicorn>=0.41.0",
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.10.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
